Crash on Annotation in (VSE) Image Preview #56199

Closed
opened 2018-08-01 18:25:54 +02:00 by ChristopherAnderssarian · 7 comments

System Information
Windows 7 Ultimate, 64-bit, 32GB, 5960x, Nvidia Quadro FX 1800 (Primary) & GeForce 9800 GTX+ (Secondary)

Blender Version
Broken:
blender-2.80-9b817bc1689
blender-2.80-c48eb521642

Short description of error

Crash when annotating on Sequencer image preview

GPencil - Starting Drawing
Error: Active view not appropriate for Grease Pencil drawing

Exact steps for others to reproduce the error

  • Editor type: Video Sequencer -> Image Preview

  • Holding D try to draw

Annotate Image Preview.blend

**System Information** Windows 7 Ultimate, 64-bit, 32GB, 5960x, Nvidia Quadro FX 1800 (Primary) & GeForce 9800 GTX+ (Secondary) **Blender Version** Broken: blender-2.80-9b817bc1689 blender-2.80-c48eb521642 **Short description of error** Crash when annotating on Sequencer image preview `GPencil - Starting Drawing` `Error: Active view not appropriate for Grease Pencil drawing` **Exact steps for others to reproduce the error** - Editor type: Video Sequencer -> Image Preview - Holding D try to draw [Annotate Image Preview.blend](https://archive.blender.org/developer/F4101454/Annotate_Image_Preview.blend)

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

I can't get it to constantly crash in both Windows and Linux under the same circumstances.
Sometimes it crashes in all editors and sometimes not...


After further testing the Linux crash may have been an anomaly.
Though can reproduce 100% of the time with my userpref file.
userpref.blend
I'm not sure what I've done to it or if it's worth investigating, but I'll leave it up to the developers.

I can't get it to constantly crash in both Windows and Linux under the same circumstances. Sometimes it crashes in all editors and sometimes not... ___ After further testing the Linux crash may have been an anomaly. Though can reproduce 100% of the time with my userpref file. [userpref.blend](https://archive.blender.org/developer/F4101686/userpref.blend) I'm not sure what I've done to it or if it's worth investigating, but I'll leave it up to the developers.

Added subscribers: @JoshuaLeung, @antoniov

Added subscribers: @JoshuaLeung, @antoniov

I think this is for you @JoshuaLeung ?

I think this is for you @JoshuaLeung ?
Member

I couldn't reproduce this issue, but I think I know what may cause it (I still don't know how exactly it gets triggered though).

EDIT: Correction, that was without the userpref.blend

I couldn't reproduce this issue, but I think I know what may cause it (I still don't know how exactly it gets triggered though). EDIT: Correction, that was without the userpref.blend

This issue was referenced by 503866c681

This issue was referenced by 503866c68154ef09e6199068391515f81eebaa2d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56199
No description provided.